crates/backyard-parser/tests/snapshots/include__require_once.snap
---
source: crates/backyard-parser/tests/include.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: include
    use_parenthesis: true
    is_require: true
    is_once: true
    argument:
      node_type: string
      quote: Double
      value: a
      loc:
        start:
          line: 1
          column: 13
          offset: 13
        end:
          line: 1
          column: 13
          offset: 13
      leadings: []
      trailings: []
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 16
        offset: 16
    leadings: []
    trailings: []
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 17
    offset: 17
leadings: []
trailings: []
